[project]
name = "personal-assistant"
version = "0.1.0"
description = "Personal assistant CLI application"
authors = [
    {name = "Lesya Sakhnovska",email = "lesya.sakhnovska@gmail.com"}
]
license = "MIT"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "colorama (>=0.4.6,<0.5.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
